--- a/config.json
+++ b/config.json
@@ -2,12 +2,11 @@
   "inbounds": [
   {
     "port": 80,
-    "protocol": "vmess",
+    "protocol": "vless",
     "settings": {
       "clients": [
         {
-          "id": "aa12098f-56f3-49ed-bd5d-267f3ce2e873",       
-          "alterId": 64
+          "id": "fae1701e-ee35-4a95-bc66-2bebf9a63944",       
         }
       ]
     },
